<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity" tools:layout_editor_absoluteY="81dp">

    <EditText
            android:layout_width="320dp" android:drawableLeft="@drawable/icon_email" android:drawablePadding="5dp"
            android:layout_height="45dp" android:paddingLeft="8dp"
            android:inputType="textEmailAddress" android:background="@drawable/rounded_edit_text_login_and_register"
            android:ems="10" android:hint="@string/edit_text_email"
            android:id="@+id/edit_email_register_activity"
            app:layout_constraintEnd_toEndOf="@+id/edit_username_register_activity"
            app:layout_constraintStart_toStartOf="@+id/edit_username_register_activity" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_username_register_activity"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="320dp" android:drawableLeft="@drawable/icon_username" android:drawablePadding="5dp"
            android:layout_height="45dp" android:paddingLeft="8dp"
            android:inputType="text" android:background="@drawable/rounded_edit_text_login_and_register"
            android:ems="10" android:hint="@string/edit_text_username"
            android:id="@+id/edit_username_register_activity"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4" app:layout_constraintEnd_toEndOf="@+id/textView4"/>
    <EditText
            android:layout_width="320dp" android:drawableLeft="@drawable/icon_password" android:drawablePadding="5dp"
            android:layout_height="45dp" android:paddingLeft="8dp"
            android:inputType="textPassword" android:background="@drawable/rounded_edit_text_login_and_register"
            android:ems="10" android:hint="@string/edit_text_password"
            android:id="@+id/edit_password_register_activity"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_email_register_activity"
            app:layout_constraintStart_toStartOf="@+id/edit_email_register_activity"
            app:layout_constraintEnd_toEndOf="@+id/edit_email_register_activity"/>
    <TextView
            android:text="@string/text_view_already_register"
            android:layout_width="wrap_content" android:textStyle="italic"
            android:layout_height="wrap_content" android:textColor="@color/colorBlue"
            android:id="@+id/text_view_already_register_register_activity"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_password_register_activity" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/edit_password_register_activity" android:layout_marginRight="8dp"/>
    <TextView
            android:text="@string/text_view_create_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:id="@+id/textView4"
            android:textSize="24sp" android:layout_marginTop="48dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="32dp"
            app:layout_constraintHorizontal_bias="1.0"/>
    <Button
            android:text="@string/btn_register"
            android:layout_width="312dp" android:textAllCaps="false"
            android:layout_height="45dp" android:background="@drawable/rounded_btn_create_account_register_activity"
            android:id="@+id/btn_signin_register_activity" android:textColor="@color/colorGreyWhite"
            app:layout_constraintEnd_toEndOf="@+id/edit_password_register_activity"
            app:layout_constraintStart_toStartOf="@+id/edit_password_register_activity" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/text_view_already_register_register_activity"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:elevation="10dp" android:visibility="invisible"
            android:id="@+id/progressBar" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
</android.support.constraint.ConstraintLayout>