<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <EditText
            android:layout_width="0dp" android:drawableLeft="@drawable/icon_email" android:drawablePadding="5dp"
            android:layout_height="45dp" android:paddingLeft="8dp"
            android:inputType="textEmailAddress" android:background="@drawable/rounded_edit_text_login_and_register"
            android:ems="10" android:hint="@string/edit_text_email"
            android:id="@+id/edit_email_login_activity" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="32dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="0dp" android:drawableLeft="@drawable/icon_password" android:drawablePadding="5dp"
            android:layout_height="45dp" android:paddingLeft="8dp"
            android:inputType="textPassword" android:background="@drawable/rounded_edit_text_login_and_register"
            android:ems="10" android:hint="@string/edit_text_password"
            android:id="@+id/edit_password_login_activity" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_email_login_activity"
            app:layout_constraintEnd_toEndOf="@+id/edit_email_login_activity"
            app:layout_constraintStart_toStartOf="@+id/edit_email_login_activity"/>
    <TextView
            android:text="@string/text_view_not_yet_register"
            android:layout_width="wrap_content" android:textStyle="italic"
            android:layout_height="wrap_content" android:textColor="@color/colorBlue"
            android:id="@+id/text_view_not_yet_register_login_activity"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/edit_password_login_activity"
            app:layout_constraintEnd_toEndOf="@+id/edit_password_login_activity" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
    <TextView
            android:text="@string/text_view_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:textStyle="bold"
            android:layout_marginTop="48dp" android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp" android:id="@+id/textView4"
            android:textSize="24sp" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/btn_login"
            android:layout_width="0dp" android:textAllCaps="false"
            android:layout_height="45dp" android:background="@drawable/rounded_btn_login_login_activity"
            android:id="@+id/btn_login_login_activity" android:textColor="@color/colorSolid"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/text_view_not_yet_register_login_activity"
            app:layout_constraintStart_toStartOf="@+id/edit_password_login_activity"
            app:layout_constraintEnd_toEndOf="@+id/edit_password_login_activity" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.014"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:elevation="10dp" android:visibility="invisible"
            android:id="@+id/progressBar1" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
</android.support.constraint.ConstraintLayout>